Version 4.0.1
- Added initialization of local arrays in C

Version 4.0.0
- Fixed in-function array declarations in BASIC
- Fixed using constant members in const declarations in BASIC
- Use printf for translating BASIC print statements
- Allow underscore after decimal point in floating point numbers
- Support ptra++ and --ptra operands in inline assembly
- Revised how CLKMODE and CLKFREQ are handled; made them functions rather than variables and changed some internal code for better compatibility
- Fixed a bug in redefinition of special built-in functions
- Fixed a spurious "Out of memory" message when allocating 0 bytes
- Added -x flag to fastspin to output magic exit code for C programs
- Fixed promotion to unsigned when one operator is unsigned
- Added VAL and VAL% to BASIC
- Fixed a number of small C bugs

Version 3.9.33
- Fixed a bug in encoding wrlut and rdlut instructions in rev 2a
- Fixed wrpin_ functions in Spin (affects P2 SmartSerial object)

Version 3.9.32
- Improved handling of hub addresses in Spin objects
- Fixed some errors in C propeller2.h file
- Fixed lmm=trace
- Fixed C99 for loop declarations
- Allow selection of P2 silicon version via "-2a" or "-2b" flags; for now just plain "-2" selects rev A (original silicon)
- Made __builtin_printf return the number of characters printed, like printf does.
- Improved error checking for LOC and jumps

Version 3.9.31
- Fixed an off-by-one error in SELECT CASE
- Allow slightly longer functions to be inlined (improves pintoggle)
- Fixed getcnt() in BASIC
- Recognize ! as well as # as a suffix to indicate a floating point variable
- Fixed some BASIC parsing problems with empty IF/ELSE conditions and empty subroutines.
- Fixed a problem with printing long strings
- Changed format of error messages to "filename:line: error: stuff" to match the preprocessor's error format and make parsing easier

Version 3.9.30
- Fixed some floating point parsing issues
- Added some missing C stdio functions